--- a/styles/util.css
+++ b/styles/util.css
@@ -73,6 +73,24 @@ footer nav a:hover::after {
   width: 100%;
 }
 
+/* IDK */
+.btn {
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  text-align: center;
+  padding: 0.5rem 1rem;
+  border: none;
+  background: var(--accent);
+  color: var(--bg);
+  border-radius: 3px;
+  transition: background 0.3s ease, color 0.3 ease;
+}
+
+.btn:hover {
+  filter: brightness(1.2);
+}
+
 @media (max-width: 480px) {
   header h1 {
     display: none;
