--- a/styles/util.css
+++ b/styles/util.css
@@ -5,6 +5,7 @@ header {
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid var(--secondary);
+  background: var(--mute);
   position: sticky;
   z-index: 68;
   top: 0;
@@ -23,6 +24,7 @@ footer {
   width: 100%;
   padding: 1rem;
   border-top: 1px solid var(--secondary);
+  background: var(--mute);
 }
 
 header h1 a {
@@ -66,7 +68,7 @@ header nav a:hover,
 footer nav a:hover {
   color: var(--accent);
 }
-/* nice shit here, first approach was using border bottom but it is messing with the text */
+/* nice shit here, first approach was using border bottom but it was messing with the text */
 
 header nav a:hover::after,
 footer nav a:hover::after {
