--- a/styles/util.css
+++ b/styles/util.css
@@ -19,6 +19,7 @@ footer {
   justify-content: center;
   gap: 0.5rem;
   position: absolute;
+  bottom: 0;
   z-index: 70;
   width: 100%;
   padding: 1rem;
