--- a/styles/index.css
+++ b/styles/index.css
@@ -4,11 +4,12 @@
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  background: url(/public/hero-placeholder.jpg);
+  background: url("../public/hero-placeholder.jpg");
   color: white;
   min-height: 90vh;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 
 .hero-content {
@@ -41,4 +42,33 @@
   inset: 0;
   z-index: 0;
   background: rgba(0, 0, 0, 0.8);
+}
+
+/* REVIEW CARDS */
+.review-section {
+  background: rgb(40, 37, 37);
+}
+
+.review-container {
+  display: grid;
+  gap: 1rem;
+  /* 1 column on small, 3 on larger screens */
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  margin-top: 1rem;
+}
+
+.review-card {
+  background: rgb(30, 28, 28);
+  border-radius: 6px;
+  padding: 1rem 1.2rem;
+  border: 1px solid var(--secondary);
+  min-height: 120px;
+  text-align: center;
+  flex-direction: column;
+  justify-content: space-between;
+  display: flex;
+}
+
+.review-card blockquote {
+  font-style: italic;
 }
