--- a/styles/base.css
+++ b/styles/base.css
@@ -45,7 +45,7 @@ ol {
 :root {
   --bg: #0d0d0d;
   --text: #f5f5f5;
-  --accent: #bada55;
+  --accent: #d40000;
   --secondary: #666;
   --mute: #121212;
 }
