--- a/styles/index.css
+++ b/styles/index.css
@@ -4,9 +4,9 @@
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  background: url("../public/hero-placeholder.jpg");
+  background: url("../public/feverlogo2.jpg");
   color: white;
-  min-height: 90vh;
+  min-height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -26,7 +26,7 @@
 .tagline {
   font-size: clamp(1rem, 2.5w, 2rem);
   opacity: 0.8;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
 }
 
 .cta-container {
@@ -44,31 +44,43 @@
   background: rgba(0, 0, 0, 0.8);
 }
 
-/* REVIEW CARDS */
-.review-section {
-  background: rgb(40, 37, 37);
+
+.card {
+  border: 1px solid #444;
+  border-radius: 8px;
+  transition: transform 0.2s ease;
 }
 
-.review-container {
-  display: grid;
-  gap: 1rem;
-  /* 1 column on small, 3 on larger screens */
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  margin-top: 1rem;
+.card:hover {
+  transform: translateY(-5px);
 }
 
-.review-card {
-  background: rgb(30, 28, 28);
+
+.card img {
   border-radius: 6px;
-  padding: 1rem 1.2rem;
-  border: 1px solid var(--secondary);
-  min-height: 120px;
-  text-align: center;
-  flex-direction: column;
-  justify-content: space-between;
-  display: flex;
+  margin-bottom: 0.8rem;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
 }
 
-.review-card blockquote {
-  font-style: italic;
+
+.card h3 {
+  margin: 0.6rem 0 0.4rem;
+  font-weight: 600;
+}
+
+.card em {
+  font-style: normal;
+  color: #ccc;
+}
+
+.card small {
+  color: #aaa;
+  font-size: 0.85rem;
+  margin-top: 0.4rem;
+  display: block;
+}
+
+.genre-icon{
+  font-size: 1.8rem;
 }
