--- a/styles/products.css
+++ b/styles/products.css
@@ -3,7 +3,7 @@
     justify-content: start;
     align-items: center;
     gap: 1rem;
-    padding: 1rem 5rem;
+    padding: 2rem 1rem 0rem 10rem;
   }
   
   .product-nav .btn-dark:hover {
@@ -133,21 +133,42 @@
 }
 
 
-  @media (max-width: 600px) {
+/* Responsive adjustments */
+@media (max-width: 600px) {
     .filters {
-      display: none;
+        display: none;
     }
-  
+
     .search-box,
     .search-input {
-      width: 100%;
+        width: 100%;
     }
-  
+
     .dialog-filter-btn {
-      display: block;
+        display: block;
     }
-  
+
     .product-nav {
-      padding-inline: 3rem;
+        padding-inline: 3rem;
     }
-  }
+
+
+    .hover-cart-icon {
+        width: 28px; 
+        height: 28px; 
+        padding: 0.2rem; 
+    }
+
+
+    .product-card-container {
+
+        grid-template-columns: repeat(1, 1fr); 
+    }
+}
+
+@media (min-width: 601px) and (max-width: 900px) {
+    .product-card-container {
+
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
